maalstroom/resources/style.css
* {
    box-sizing: border-box;
}
html, body {
    height: 100%;
    padding: 0;
    margin: 0;
    font-size: ;
    color: #141c30;
    font: .9em Helvetica, Arial, "Lucida Grande", sans-serif;
  letter-spacing: .06em;
}
body.iframe {
    height: 100%;
}
a {
  text-decoration: none;
}
a:visited, a:link  {
  color: #141c30;
}
a.reactive_link {
  text-decoration: none;
}
a.reactive_link:hover {
  text-decoration: underline;
}
a.reactive_link:visited, a.reactive_link:link  {
  color: #141c30;
}
ul {
  list-style: none;
  padding: 0;
}
h4 {
    margin: 0 0 1em 0;
    padding: 0;
}
h5 {
    margin: 0;
    padding: 0;
}
header {
    color: #ffffff;
    height: 3.8em;
    margin: 0;
    background-color: #141c30;
}
footer {
    background-color: #bebfc4;
    height: 2.1em;
    width: 100%;
    padding-top: .5em;
    padding-left: 1em;
    margin: 0;
    bottom: 0;
    position: absolute;
    color: #141c30;
}
footer a:hover {
    color: #ffffff;
}
aside {
    border: 0;
    margin-top: 0;
    float: left;
    position: relative;
    text-align: left;
    width: 18em;
    background-color: #ffffff;
    height: calc(100% - 5em); 
}
.wrapper { 
    background: url("images/stripe.png") repeat top left;
    border: 0;
    margin-top: 0;
    padding-top: .8em;
    padding-left: 1.6em;
    padding-right: 1.6em;
    position: relative;
    margin-left: 18em;
    background-color: #e5e5e5;
    height: calc(100% - 5em); 
}
section { 
  height: 100%;
}
.left {
    border: 0;
    margin-top: 0;
    float: left;
    position: relative;
    text-align: left;
    width: 18em;
    color: #ffffff;
    height: 3.8em;
}
.right {
    border: 0;
    margin-top: 0;
    position: relative;
    margin-left: 18em; 
    color: #ffffff;
    height: 3.8em;
}
div * * span {
    margin-left: 0.5em;
    margin-right: 0.5em;
}
.nomargin {
    margin: 0;
}
.nopadding {
    padding: 0;
}
.valign_top {
    vertical-align: top;
}
.valign_middle {
    vertical-align: middle;
}

.valid_sender {
    color: green;
}
.invalid_sender:before {
    content: "FAKED:";
}
.invalid_sender {
    color: red;
    text-decoration: line-through;
}

iframe {
    margin: 0;
    padding: 0;
    border: 0;
}
label {
    width: 10em;
    display: inline-block;
    text-align: right;
}
form p * {
    vertical-align: top;
}
label:after {
    content: ": ";
}
iframe.panel {
    background-color: #86CBD2;
}
body.panel {
    display: table;
    height: 100%;
}
body.panel div.panel {
    display: table-cell;
    vertical-align: middle;
    height: 100%;
    padding-right: 0.75em;
    padding-left: 0.75em;
}
.italic {
    font-style: italic;
}
.strikethrough {
    text-decoration: line-through;
}
div.panel span {
    padding-right: 0.25em;
    padding-left: 0.25em;
}
.right_text {
    position: absolute;
    right: 0;
}
.nowrap {
    white-space: nowrap;
}
.tag {
    background-color: #EEEEFF;
}

/*Style for mailboxes sidebar*/

#mailboxes {
  padding-left: 2.5em;
  padding-right: 2em;
  padding-top: 1.5em;
}
.mailbox-trunc {
    overflow: hidden;
    text-overflow: ellipsis;  // IE 6+, FF 7+, Op 11+, Saf 1.3+, Chr 1+
    -o-text-overflow: ellipsis;  // for Opera 9 & 10
    white-space: nowrap;
    padding: 0;
    margin: 0;
}
.active-notify {
    float: right;
    height: 17px;
    border-radius: 10px;
    border: 1px solid #141c30;
    background-color: #39a3af;
    margin: 0 auto;
   -moz-box-shadow:    inset 1px 1px 2px #47525e;
   -webkit-box-shadow: inset 1px 1px 2px #47525e;
   box-shadow:         inset 1px 1px 2px #47525e;
   font-size: 9px;
   padding-left: 6px;
   padding-right: 7px;
   padding-top: 2px;
   color: #ffffff;
   font-weight: bold;
}
.inactive-notify {
    float: right;
    height: 17px;
    border-radius: 10px;
    border: 1px solid #b6b6b6;
    background-color: #b6b6b6;
    margin: 0 auto;
    font-size: 9px;
   padding-left: 6px;
   padding-right: 7px;
   padding-top: 2px;
   color: #ffffff;
   font-weight: bold;
}
.mailbox-pad {
  padding-left: 4.8em;
  padding-bottom: .5em;
  padding-top: .5em;
  padding-right: .5em;
}
.inbox-icon-active {
  background: url("images/inbox_white.png") no-repeat center left;
  background-position: 30px;
}
.inbox-icon {
  background: url("images/inbox.png") no-repeat center left;
  background-position: 30px;
}
.inbox-icon:hover {
  background: url("images/inbox_white.png") no-repeat center left;
  background-position: 30px;
}
.sent-icon {
  background: url("images/sent.png") no-repeat center left;
  background-position: 28px;
}
.sent-icon:hover {
  background: url("images/sent_white.png") no-repeat center left;
  background-position: 28px;
}
.drafts-icon {
  background: url("images/draft.png") no-repeat center left;
  background-position: 30px;
}
.drafts-icon:hover {
  background: url("images/draft_white.png") no-repeat center left;
  background-position: 30px;
}
.tag-icon {
  background: url("images/tags.png") no-repeat center left;
  background-position: 30px;
}
.tag-icon:hover {
  background: url("images/tags_white.png") no-repeat center left;
  background-position: 30px;
}
.bullet {
  background: url("images/bullet.png") no-repeat center left;
  background-position: 37px;
}
.bullet:hover {
  background: url("images/bullet_white.png") no-repeat center left;
  background-position: 37px;
}
.mailbox-list li {
}
.active-mailbox {
  background-color: #575c6f;
  color: #ffffff;
}
.active-mailbox a {
  color: #ffffff;
}
.mailbox-list li:hover {
  background-color: #38A3AF;
}
.mailbox-list li:hover a {
  color: #ffffff;
}
.mailbox-list a:visited {
  color: #141c30;
}
.divider {
  background: url("images/divider.gif") no-repeat top left;
  width: 163px;
  height: 5px;
  margin-left: 2.5em;
}
.tag-head li {
  padding-bottom: .4em;
  padding-top: .1em;
  padding-right: .6em;
}
.tag-head li:hover {
  background-color: #38A3AF;
}
.tag-head li:hover a {
  color: #ffffff;
}
.tag-head a:visited {
  color: #141c30;
}
/* ... */

